[package]
name = "aya-template"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya = { git="https://github.com/alessandrod/aya", branch="main", features = ["async_tokio"] }
anyhow = "1"
bytes = "1.0.1"
