[package]
name = "aya-template-bpf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya-bpf = { git = "https://github.com/EKTehtris/aya", branch = "probe_regs" }
aya-bpf-cty = { git = "https://github.com/EKTehtris/aya", branch = "probe_regs" }
aya-bpf-bindings = { git = "https://github.com/EKTehtris/aya", branch = "probe_regs" }
#aya-bpf = { path="/home/r/Documents/ayagithub/bpf/aya-bpf" }
#aya-bpf-cty = { path="/home/r/Documents/ayagithub/bpf/aya-bpf-cty" }
#aya-bpf-bindings = { path="/home/r/Documents/ayagithub/bpf/aya-bpf-bindings" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"